--- a/package.json
+++ b/package.json
@@ -9,15 +9,36 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "11.3.1",
+    "@react-native-community/progress-view": "^1.4.2",
+    "@react-native-firebase/app": "20.1.0",
+    "@react-native-firebase/storage": "20.1.0",
+    "@react-navigation/native": "6.1.17",
+    "@react-navigation/native-stack": "6.9.26",
+    "@shopify/flash-list": "1.6.4",
+    "@types/react-redux": "7.1.33",
     "expo": "~51.0.14",
+    "expo-build-properties": "~0.12.3",
+    "expo-dev-client": "~4.0.18",
+    "expo-font": "~12.0.7",
+    "expo-image-picker": "~15.0.5",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-native": "0.74.2",
+    "react-native-safe-area-context": "4.10.4",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
+    "react-native-vision-camera": "4.3.2",
+    "react-redux": "8.1.2",
+    "redux": "4.1.2",
+    "redux-logger": "3.0.6",
+    "redux-thunk": "2.4.2",
+    "tiny-emitter": "2.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
-  },
-  "private": true
+    "@babel/core": "^7.24.7",
+    "@types/react": "^18.3.3",
+    "@types/react-native": "^0.73.0",
+    "typescript": "^5.4.5"
+  }
 }
